# merkle-drop

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  airdrop.csv  constraints.txt  gen-airdrop-list  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
contracts/: .soliumrc.json
contracts/contracts/: DroppedToken.sol  ERC20Interface.sol  MerkleDrop.sol  SafeMath.sol
merkle_drop/: airdrop.py  cli.py  deploy.py  load_csv.py  load_json.py  merkle_tree.py  server.py  status.py
scripts/: pack_contracts.py
src/merkle_drop/: airdrop.py  cli.py  deploy.py  load_csv.py  merkle_tree.py  server.py
tests/: conftest.py  test_cli.py  test_deploy.py  test_merkle_drop.py  test_merkle_tree.py  test_status.py
