[metadata]
name = merkle-drop

[options.packages.find]
where=src

[options]
python_requires = >= 3.6
setup_requires = setuptools_scm
package_dir=
    =src
packages=find:

install_requires =
    click
    web3
    contract-deploy-tools
    eth_utils
    flask
    flask_cors
    pendulum
    gunicorn

[options.entry_points]
console_scripts =
    merkle-drop=merkle_drop.cli:main

[options.package_data]
merkle_drop =
  contracts.json

[flake8]
max-line-length = 119
ignore =
       # P101 format string does contain unindexed parameters
      P101
       # default:
       E121,E123,E126,E226,E24,E704,W503,W504
       # E203 is whitespace before ':',
       # black does it right, but flake8 wrongly complains
       E203

[isort]
line_length=88
known_future_library=future
known_first_party=merkle_drop
default_section=THIRDPARTY
combine_as_imports=1
# black compatibility
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
